fix: decrease inter-row spacing in WorkerPool grid table

--- a/platform/dashboard/src/client/components/Queue.scss
+++ b/platform/dashboard/src/client/components/Queue.scss
@@ -4,6 +4,7 @@
 
 .codeflare--workqueues {
   display: table;
+  line-height: 0.75em;
 
   .codeflare--workqueues-row {
     display: table-row;
